// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AuthenticationProviderInformation />  > renders correctly when AMR is helsinkiAccountAMR > should render helsinki account information as expected based on config 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.authenticationMethod
        </h2>
        <span>
          identityProvider.helsinkiAccount
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly when AMR is tunnistusSuomifiAMR > should render suomi.fi information as expected based on config 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.authenticationMethod
        </h2>
        <span>
          identityProvider.tunnistusSuomifi
        </span>
      </div>
    </div>
  </section>
</div>
`;
